repo moved again. Updated tmux and fish config.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,10 +1,8 @@
 # ------Basic settings------
 # Set terminall colours to render propperly
-# Use the correct terminal type
-set-option -g default-terminal "tmux-256color"
-set-option -sa terminal-overrides ",xterm-256color:Tc"
-# set -g default-terminal "screen-256color"
-# set-option -sa terminal-overrides ",xterm-kitty:RGB"
+set-option default-terminal "tmux-256color"
+set-option -a terminal-overrides ",*256col*:RGB"
+set-option -a terminal-overrides ",alacritty:RGB"
 
 # Fix background color issues
 set -g status-style bg=default
@@ -12,12 +10,13 @@ set -g pane-border-style bg=default
 set -g window-style bg=default
 set -g window-active-style bg=default
 
-
 # Others
 set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
+set -g status-key vi
+setw -g mode-keys vi
   
 # ------Keybiinds------
 
@@ -34,21 +33,18 @@ bind-key x kill-pane
 
 # Open splits in cwd
 bind '"' split-window -v -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
+bind | split-window -h -c "#{pane_current_path}"
 
 # vim style window switching
 bind -n M-J previous-window
 bind -n M-K next-window
 
+# status bar updating
 
-# ------Theams------
+set -g status-interval 2 
 
 
-
-
-# Specify TPM directory
-# set -g @tpm_plugins '~/.config/tmux/plugins'
-
+# ------Plugins------
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
