--- a/tmux/tmux_cappuchin.conf
+++ b/tmux/tmux_cappuchin.conf
@@ -30,7 +30,10 @@ set -g @catppuccin_window_current_fill "all"
 
 # ------Status------
 
-set -g @catppuccin_status_modules_right "user host directory date_time"
+set -g @catppuccin_status_modules "branch"
+
+# set -g @catppuccin_status_modules_right "directory date_time"
+set -g @catppuccin_status_modules_right "directory branch date_time"
 set -g @catppuccin_status_modules_left "session"
 set -g @catppuccin_date_time_text "%H:%M"
 set -g @catppuccin_status_left_separator  " "
