Tmux mouse support eneabled

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -17,7 +17,8 @@ set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 set -g status-key vi
 setw -g mode-keys vi
-  
+ set -g mouse on  
+
 # ------Keybiinds------
 
 # Prefix
