--- a/alacritty/nmtui_colours.toml
+++ b/alacritty/nmtui_colours.toml
@@ -1,18 +1,82 @@
-[font]
-size = 18  # Adjust size as needed
-
 [colors.primary]
 background = "#1e1e2e"
-foreground = "#cdd6f4"
-dim_foreground = "#7f849c"
-bright_foreground = "#cdd6f4"
+# foreground = "#cdd6f4"
+# dim_foreground = "#7f849c"
+# bright_foreground = "#cdd6f4"
+#
+# [colors.normal]
+# black = "#cdd5be"
+# red = "#f5e0dc"
+# green = "#a6e3a1"
+# yellow = "#f9e2af"
+# blue = "#89b4fa"
+# magenta = "#1e1e2e"
+# cyan = "#94e2d5"
+# white = "#1e1e2e"
 
+
+# [colors.primary]
+# background = "#1e1e2e"
+# foreground = "#cdd6f4"
+# dim_foreground = "#7f849c"
+# bright_foreground = "#cdd6f4"
+#
+# [colors.cursor]
+# text = "#1e1e2e"
+# cursor = "#f5e0dc"
+#
+# [colors.vi_mode_cursor]
+# text = "#1e1e2e"
+# cursor = "#b4befe"
+#
+# [colors.search.matches]
+# foreground = "#1e1e2e"
+# background = "#a6adc8"
+#
+# [colors.search.focused_match]
+# foreground = "#1e1e2e"
+# background = "#a6e3a1"
+#
+# [colors.footer_bar]
+# foreground = "#1e1e2e"
+# background = "#a6adc8"
+#
+# [colors.hints.start]
+# foreground = "#1e1e2e"
+# background = "#f9e2af"
+#
+# [colors.hints.end]
+# foreground = "#1e1e2e"
+# background = "#a6adc8"
+#
+# [colors.selection]
+# text = "#1e1e2e"
+# background = "#f5e0dc"
+#
 [colors.normal]
-black = "#cdd5be"
-red = "#f5e0dc"
-green = "#a6e3a1"
-yellow = "#f9e2af"
-blue = "#89b4fa"
+# black = "#ffffff"
+# red = "#f38ba8"
+# green = "#a6e3a1"
+# yellow = "#f9e2af"
+# blue = "#89b4fa"
+white = "#607fb0"
+# cyan = "#94e2d5"
 magenta = "#1e1e2e"
-cyan = "#94e2d5"
-white = "#1e1e2e"
+#
+# [colors.bright]
+# black = "#585b70"
+# red = "#f38ba8"
+# green = "#a6e3a1"
+# yellow = "#f9e2af"
+# blue = "#89b4fa"
+# magenta = "#f5c2e7"
+# cyan = "#94e2d5"
+# white = "#a6adc8"
+#
+# [[colors.indexed_colors]]
+# index = 16
+# color = "#fab387"
+#
+# [[colors.indexed_colors]]
+# index = 17
+# color = "#f5e0dc"
