--- a/i3/autostart.conf
+++ b/i3/autostart.conf
@@ -5,7 +5,7 @@ exec --no-startup-id dex --autostart --environment i3
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so they are included here as an example. Modify as you see fit.
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+exec --no-startup-id xautolock -time 5 -corners '-000' -locker "pactl set-sink-mute @DEFAULT_SINK@ 1; i3lock -n -i $HOME/dotfiles/i3/backgrounds/OutsetIslandEvening.png"
 
 # NetworkManager is the most popular way to manage wireless networks on Linux, and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
