--- a/i3/visual.conf
+++ b/i3/visual.conf
@@ -1,5 +1,8 @@
 # ----------bacground setting----------
 
+default_border pixel 1
+default_floating_border pixel 1
+for_window [class="^.*"] border pixel 1
 gaps inner 10px
 
 
