Polybar adjusted icons size, TMUX removed clock module

--- a/polybar/date.ini
+++ b/polybar/date.ini
@@ -2,8 +2,9 @@
 type = internal/date
 interval = 1
 
-date = %H:%M
-date-alt = %Y-%m-%d %H:%M:%S
+# date = %H:%M
+date = %{A1:alacritty -e calcurse:} %Y-%m-%d %H:%M:%S %{A}
+# date-alt = %Y-%m-%d %H:%M:%S
 
-label = %date%
+label =%{T2}󰃰%{T-} %date%
 label-foreground = ${colors.primary}
