--- a/polybar/pulseaudio.ini
+++ b/polybar/pulseaudio.ini
@@ -3,9 +3,14 @@ type = internal/pulseaudio
 
 format-volume-prefix = "VOL "
 format-volume-prefix-foreground = ${colors.primary}
-format-volume = <label-volume>
+# format-volume = <label-volume>
+format-volume = <ramp-volume> <label-volume>
+
+ramp-volume-0 = %{T2}󰕿%{T-} 
+ramp-volume-1 = %{T2}󰖀%{T-} 
+ramp-volume-2 = %{T2}󰕾%{T-} 
 
 label-volume = %percentage%%
 
-label-muted = muted
+label-muted =  %{T2}󰖁%{T-} muted 
 label-muted-foreground = ${colors.disabled}
