--- a/polybar/battery.ini
+++ b/polybar/battery.ini
@@ -2,23 +2,23 @@
 type = internal/battery
 format-prefix = "BAT "
 format-prefix-foreground = ${colors.primary}
-full-at = 99
+full-at = 90
 format-charging = <animation-charging> <label-charging>
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-3 = 
-animation-charging-4 = 
+animation-charging-0 = %{T2}%{T-}
+animation-charging-1 = %{T2}%{T-}
+animation-charging-2 = %{T2}%{T-}
+animation-charging-3 = %{T2}%{T-}
+animation-charging-4 = %{T2}%{T-}
 ; Framerate in milliseconds
 animation-charging-framerate = 750
 animation-charging-foreground = ${colors.peach}
 format-discharging = <ramp-capacity> <label-discharging>
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
-low-at = 5
+ramp-capacity-0 = %{T2}%{T-}
+ramp-capacity-1 = %{T2}%{T-}
+ramp-capacity-2 = %{T2}%{T-}
+ramp-capacity-3 = %{T2}%{T-}
+ramp-capacity-4 = %{T2}%{T-}
+low-at = 15
 battery = BAT1
 adapter = ACAD
 poll-interval = 5
