--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -1,5 +1,5 @@
 [colors]
-base = #1e1e2e
+base = #1e1e2eff
 mantle = #181825
 crust = #11111b
 text = #cdd6f4
@@ -65,7 +65,8 @@ radius = 0
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-bottom = true
+top = true
+# bottom = true
 
 line-size = 6pt
 
@@ -80,7 +81,8 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.flamingo}
 
-font-0 = Hack Nerd Font Mono:size=14;6
+font-0 = Hack Nerd Font Mono:size=14;4
+font-1 = Hack Nerd Font Mono:size=20;6
 
 modules-left = xworkspaces xwindow
 modules-right = pulseaudio battery memory cpu wlan date
