--- a/polybar/network.ini
+++ b/polybar/network.ini
@@ -2,7 +2,7 @@
 type = internal/network
 interval = 5
 format-connected = %{A1:alacritty --config-file ~/dotfiles/alacritty/nmtui_colours.toml -e nmtui:}<label-connected>%{A}
-format-disconnected = %{A1:alacritty -e nmtui:}<label-disconnected>%{A}
+format-disconnected = %{A1:alacritty --config-file ~/dotfiles/alacritty/nmtui_colours.toml -e nmtui:}<label-disconnected>%{A}
 ;format-connected = <label-connected>
 ;format-disconnected = <label-disconnected>
 label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
@@ -10,9 +10,9 @@ label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
 [module/wlan]
 inherit = network-base
 interface-type = wireless
-label-connected = %{F#F0C674}%ifname%%{F-} %essid%
+label-connected = %{F#F0C674}%ifname%%{F-} %{T2}%{T-} %essid%
 
 [module/eth]
 inherit = network-base
 interface-type = wired
-label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
+label-connected = %{F#F0C674}%ifname%%{F-} %{T2}%{T-} %local_ip%
