Picom messed around transparency

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -78,8 +78,8 @@ fade-out-step = 0.03;
 #
 # Range: 0.1 - 1.0
 # Default: 1.0 (disabled)
-frame-opacity = 0.1;
-
+# frame-opacity = 0.2;
+# inactive-opacity = 0.9;
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
 #
 # Default: false
@@ -94,7 +94,14 @@ frame-opacity = 0.1;
 # `transparent-clipping`.
 #
 # Default: 0 (disabled)
-corner-radius = 20
+
+corner-radius = 20;
+round-borders = 1;
+
+rounded-corners-exclude = [
+  "window_type = 'dock'"
+];
+
 
 #################################
 #            Blur               #
@@ -289,8 +296,8 @@ rules: ({
   opacity = 0.75;
   full-shadow = false;
 }, {
-  match = "window_type = 'dock'    || "
-          "window_type = 'desktop' || "
+  # match = "window_type = 'dock'    || "
+  match = "window_type = 'desktop' || "
           "_GTK_FRAME_EXTENTS@";
   blur-background = true;
 }, {
