--- a/i3/keybinds.conf
+++ b/i3/keybinds.conf
@@ -1,6 +1,3 @@
-# swap caps and esc
-exec_always --no-startup-id setxkbmap -option caps:swapescape
-
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
@@ -9,7 +6,7 @@ floating_modifier $mod
 tiling_drag modifier titlebar
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec alacritty
 
 # start file manager
 bindsym $mod+f exec alacritty -e nnn -H
