--- a/polybar/modules/date.ini
+++ b/polybar/modules/date.ini
@@ -3,7 +3,7 @@ type = internal/date
 interval = 1
 
 # date = %H:%M
-date = %{A1:alacritty -e calcurse:} %Y-%m-%d %H:%M:%S %{A}
+date = %{A1:alacritty -e calcurse:} %Y-%m-%d %H:%M %{A}
 # date-alt = %Y-%m-%d %H:%M:%S
 
 label =%{T2}󰃰%{T-} %date%
