--- a/i3/autostart.conf
+++ b/i3/autostart.conf
@@ -1,14 +1,33 @@
+# ----------Autostart----------
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
 exec --no-startup-id dex --autostart --environment i3
 
-# The combination of xss-lock, nm-applet and pactl is a popular choice, so they are included here as an example. Modify as you see fit.
-
+# ----------Autolock----------
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the screen before suspend. Use loginctl lock-session to lock your screen.
 exec --no-startup-id xautolock -time 5 -corners '-000' -locker "pactl set-sink-mute @DEFAULT_SINK@ 1; i3lock -n -i $HOME/dotfiles/i3/backgrounds/OutsetIslandEvening.png"
 
+# ----------Network Manager----------
 # NetworkManager is the most popular way to manage wireless networks on Linux, and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
 
+# ----------Wallpaper----------
 # Wallpaper setup using feh 
 exec_always --no-startup-id feh --bg-scale $HOME/dotfiles/i3/backgrounds/OutsetIslandEvening.jpg
+
+# ----------Polybar----------
+# kill any hanging polybar processes
+# exec_always killall polybar
+# exec_always --no-startup-id ~/dotfiles/polybar/launch_polybar.sh
+exec_always --no-startup-id polybar
+
+# ----------Xkeyboard----------
+# set xkeyboard layputs to be use in polybar alyout switcher
+exec_always --no-startup-id setxkbmap us,pl -option caps:swapescape
+
+# ----------I3 status foo----------
+# # Stop i3bar to display a workspace bar (plus the system information i3status
+# # finds in, if available)
+# foo {
+#         status_command i2status
+# }
