--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -1,32 +1,3 @@
-[colors]
-base = #1e1e2eff
-mantle = #181825
-crust = #11111b
-text = #cdd6f4
-subtext0 = #a6adc8
-subtext1 = #bac2de
-surface0 = #313244
-surface1 = #45475a
-surface2 = #585b70
-overlay0 = #6c7086
-overlay1 = #7f849c
-overlay2 = #9399b2
-blue = #89b4fa
-lavender = #b4befe
-sapphire = #74c7ec
-sky = #89dceb
-teal = #94e2d5
-green = #a6e3a1
-yellow = #f9e2af
-peach = #fab387
-maroon = #eba0ac
-red = #f38ba8
-mauve = #cba6f7
-pink = #f5c2e7
-flamingo = #f2cdcd
-rosewater = #f5e0dc
-transparent = #FF00000
-
 ;==========================================================
 ;
 ;
@@ -45,14 +16,6 @@ transparent = #FF00000
 ;
 ;==========================================================
 
-[colors]
-background = ${colors.base}
-background-alt = ${colors.blue}
-foreground = ${colors.text}
-primary = ${colors.mauve}
-secondary = ${colors.mantle}
-alert = ${colors.red}
-disabled = ${colors.subtext1}
 
 [bar/toph]
 monitor = ${env:MONITOR:}
@@ -85,7 +48,8 @@ font-0 = Hack Nerd Font Mono:size=14;4
 font-1 = Hack Nerd Font Mono:size=20;6
 
 modules-left = xworkspaces xwindow
-modules-right = pulseaudio battery memory cpu wlan date
+modules-center = date
+modules-right = pulseaudio battery memory cpu wlan backlight xkeyboard powermenu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -104,62 +68,22 @@ type = internal/tray
 format-margin = 8pt
 tray-spacing = 16pt
 
-[module/xworkspaces]
-type = internal/xworkspaces
 
-label-active = %name%
-label-active-background = ${colors.mauve}
-label-active-foreground = ${colors.crust}
-label-active-underline= ${colors.lauve}
-label-active-padding = 1
+include-file = colors.ini
+include-file = modules/filesystem.ini
+include-file = modules/xwindow.ini
+include-file = modules/xworkspaces.ini
 
-label-occupied = %name%
-label-occupied-padding = 1
+include-file = modules/date.ini
 
-label-urgent = %name%
-label-urgent-background = ${colors.alert}
-label-urgent-padding = 1
-
-label-empty = %name%
-label-empty-foreground = ${colors.disabled}
-label-empty-padding = 1
-
-[module/xwindow]
-type = internal/xwindow
-label = %title:0:60:...%
-
-[module/filesystem]
-type = internal/fs
-interval = 25
-
-mount-0 = /
-
-label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
-
-label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.disabled}
-
-
-[module/xkeyboard]
-type = internal/xkeyboard
-blacklist-0 = num lock
-
-label-layout = %layout%
-label-layout-foreground = ${colors.primary}
-
-label-indicator-padding = 2
-label-indicator-margin = 1
-label-indicator-foreground = ${colors.background}
-label-indicator-background = ${colors.secondary}
-
-
-
-include-file = pulseaudio.ini
-include-file = battery.ini
-include-file = memory.ini
-include-file = cpu.ini
-include-file = network.ini
-include-file = date.ini
+include-file = modules/pulseaudio.ini
+include-file = modules/battery.ini
+include-file = modules/memory.ini
+include-file = modules/cpu.ini
+include-file = modules/network.ini
+include-file = modules/xkeyboard.ini
+include-file = modules/backlight.ini
+include-file = modules/powermenu.ini
 
 [settings]
 screenchange-reload = true
