--- a/RaicingLinux/.obsidian/appearance.json
+++ b/RaicingLinux/.obsidian/appearance.json
@@ -4,5 +4,8 @@
   "interfaceFontFamily": "Hack Nerd Font",
   "textFontFamily": "Hack Nerd Font",
   "monospaceFontFamily": "Hack Nerd Font",
-  "baseFontSize": 17
+  "baseFontSize": 17,
+  "enabledCssSnippets": [
+    "width"
+  ]
 }
