--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -49,7 +49,9 @@ font-1 = Hack Nerd Font Mono:size=20;6
 
 modules-left = xworkspaces xwindow
 modules-center = date
-modules-right = pulseaudio battery memory cpu wlan backlight xkeyboard powermenu
+modules-right = pulseaudio battery wlan brightness xkeyboard powermenu
+# modules-right = pulseaudio battery memory cpu wlan brightness xkeyboard powermenu
+
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -82,7 +84,7 @@ include-file = modules/memory.ini
 include-file = modules/cpu.ini
 include-file = modules/network.ini
 include-file = modules/xkeyboard.ini
-include-file = modules/backlight.ini
+include-file = modules/brightness.ini
 include-file = modules/powermenu.ini
 
 [settings]
