--- a/polybar/modules/powermenu.ini
+++ b/polybar/modules/powermenu.ini
@@ -2,7 +2,12 @@
 type = custom/menu
 
 label-open = ⏻
+label-open-foreground =${colors.primary}
+label-open-font =2
+
 label-close = x
+label-close-foreground =${colors.primary}
+label-close-font =2
 
 ; If true, <label-toggle> will be to the left of the menu items (default).
 ; If false, it will be on the right of all the items.
