--- a/polybar/modules/xkeyboard.ini
+++ b/polybar/modules/xkeyboard.ini
@@ -1,9 +1,15 @@
 [module/xkeyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
+blacklist-1 = caps lock
 
+format = <label-layout> <label-indicator>
+
+format-prefix = " "
+format-prefix-foreground =${colors.primary}
+format-prefix-font =2
 label-layout = %layout%
-label-layout-foreground = ${colors.primary}
+# label-layout-foreground = ${colors.primary}
 
 label-indicator-padding = 2
 label-indicator-margin = 1
