Tmux git submodule aded for tpm, new setup for custom modules in status bar

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "/home/grzeszko/dotfiles/tmux/plugins/tpm"]
 	path = /home/grzeszko/dotfiles/tmux/plugins/tpm
 	url = https://github.com/tmux-plugins/tpm.git
+[submodule "tmux/plugins/tpm"]
+	path = tmux/plugins/tpm
+	url = https://github.com/tmux-plugins/tpm.git
