Polybar: changed full battery to 95, Git: renamed aliases

--- a/git/config
+++ b/git/config
@@ -4,5 +4,5 @@
 
 
 [alias]
-    basename = "!basename $(git rev-parse --show-toplevel)"
-
+    getRepo = "!basename $(git rev-parse --show-toplevel)"
+    getBranch = "!git rev-parse --abbrev-ref HEAD"
