I3: updated locking using xautolock and i3 lock running in script

--- a/i3/keybinds.conf
+++ b/i3/keybinds.conf
@@ -1,4 +1,5 @@
 # Use Mouse+$mod to drag floating windows to their wanted position
+#
 floating_modifier $mod
 
 # move tiling windows via drag & drop by left-clicking into the title bar,
@@ -16,6 +17,9 @@ bindsym $mod+b exec firefox
 
 # kill focused window
 bindsym $mod+q kill
+
+#triger autolock 
+bindsym $mod+Tab exec xautolock -locknow
 
 # start dmenu (a program launcher)
 # bindsym $mod+d exec --no-startup-id dmenu_run
