Polybar: Updated locking and added suspend option

--- a/polybar/modules/powermenu.ini
+++ b/polybar/modules/powermenu.ini
@@ -16,11 +16,12 @@ expand-right = false
 menu-0-0 = ⏻
 menu-0-0-exec = systemctl poweroff
 menu-0-1 = 
-menu-0-1-exec = i3lock -n -i $HOME/dotfiles/i3/backgrounds/OutsetIslandEvening.png
+menu-0-1-exec = xautolock -locknow
+# menu-0-1-exec = i3lock -n -i $HOME/dotfiles/i3/backgrounds/OutsetIslandEvening.png
 menu-0-2 = 󰜉
 menu-0-2-exec = systemctl reboot
-# menu-0-3 = 󰤄
-# menu-0-3-exec = #menu-apps.open.2
+menu-0-3 = 󰤄
+menu-0-3-exec = systemctl suspend
 
 ; Optional item separator
 ; Default: none
