Polybar: Updated network modules and battery module appereance. Spotify module WIP

--- a/polybar/modules/battery.ini
+++ b/polybar/modules/battery.ini
@@ -2,23 +2,23 @@
 type = internal/battery
 
 low-at = 15
-full-at = 95
+full-at = 99
 battery = BAT1
 adapter = ACAD
 poll-interval = 5
 
 ;----------Full charege----------
-format-full-prefix = "BAT "
-format-full-prefix-foreground = ${colors.primary}
+# format-full-prefix = "BAT "
+# format-full-prefix-foreground = ${colors.primary}
 label-full = 
 label-full-font = 2 
-format-full = <label-full>
+format-full = <label-full> 100%
 label-full-foreground = ${colors.green}
 
 ;----------Charging----------
-format-charging-prefix = "BAT "
-format-charging-prefix-foreground = ${colors.primary}
-format-charging = <label-charging> <animation-charging>
+# format-charging-prefix = "BAT "
+# format-charging-prefix-foreground = ${colors.primary}
+format-charging = <animation-charging> <label-charging> 
 animation-charging-0 = 
 animation-charging-1 = 
 animation-charging-2 = 
@@ -26,24 +26,26 @@ animation-charging-3 = 
 animation-charging-4 = 
 ; Framerate in milliseconds
 animation-charging-framerate = 750
-animation-charging-foreground = ${colors.peach}
+animation-charging-foreground = ${colors.primary}
+# animation-charging-foreground = ${colors.peach}
 animation-charging-font = 2
 
 ;----------Discharging----------
-format-discharging-prefix = "BAT "
-format-discharging-prefix-foreground = ${colors.primary}
-format-discharging = <label-discharging> <ramp-capacity>
+# format-discharging-prefix = "BAT "
+# format-discharging-prefix-foreground = ${colors.primary}
+format-discharging = <ramp-capacity> <label-discharging>
 ramp-capacity-0 = 
 ramp-capacity-1 = 
 ramp-capacity-2 = 
 ramp-capacity-3 = 
 ramp-capacity-4 = 
 ramp-capacity-font = 2
+ramp-capacity-foreground = ${colors.primary}
 
 ;----------Low charege----------
-format-low-prefix = "BAT "
-format-low-prefix-foreground = ${colors.primary}
-format-low = <label-low> <animation-low>
+# format-low-prefix = "BAT "
+# format-low-prefix-foreground = ${colors.primary}
+format-low = <animation-low> <label-low>
 animation-low-0 = 
 animation-low-1 = 
 animation-low-font= 2
