--- a/polybar/modules/network.ini
+++ b/polybar/modules/network.ini
@@ -3,16 +3,25 @@ type = internal/network
 interval = 5
 format-connected = %{A1:alacritty --config-file ~/dotfiles/alacritty/nmtui_colours.toml -e nmtui:}<label-connected>%{A}
 format-disconnected = %{A1:alacritty --config-file ~/dotfiles/alacritty/nmtui_colours.toml -e nmtui:}<label-disconnected>%{A}
-;format-connected = <label-connected>
-;format-disconnected = <label-disconnected>
-label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
+# label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
+format-connected-prefix-font = 2
+format-connected-prefix-foreground = ${colors.primary}
+label-disconnected-font = 2
+label-disconnected-foreground = ${colors.red}
 
 [module/wlan]
 inherit = network-base
 interface-type = wireless
-label-connected = %{F#F0C674}%ifname%%{F-} %{T2}%{T-} %essid%
+format-connected-prefix = 
+label-connected = " %essid%"
+label-disconnected = 󰖪
 
 [module/eth]
 inherit = network-base
 interface-type = wired
-label-connected = %{F#F0C674}%ifname%%{F-} %{T2}%{T-} %local_ip%
+# format-connected-prefix = 󰲝
+label-connected = 󰲝
+label-connected-font = 2
+label-connected-foreground = ${colors.primary}
+# label-connected = " %local_ip%" 
+label-disconnected = 󰲛
