--- a/polybar/modules/pulseaudio.ini
+++ b/polybar/modules/pulseaudio.ini
@@ -1,16 +1,19 @@
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix = "VOL "
-format-volume-prefix-foreground = ${colors.primary}
+# format-volume-prefix = "VOL "
+# format-volume-prefix-foreground = ${colors.primary}
 # format-volume = <label-volume>
 format-volume = <ramp-volume> <label-volume>
 
-ramp-volume-0 = %{T2}󰕿%{T-} 
-ramp-volume-1 = %{T2}󰖀%{T-} 
-ramp-volume-2 = %{T2}󰕾%{T-} 
+ramp-volume-0 = 󰕿
+ramp-volume-1 = 󰖀
+ramp-volume-2 = 󰕾
+ramp-volume-font = 2 
+ramp-volume-foreground = ${colors.primary}
 
 label-volume = %percentage%%
 
-label-muted =  %{T2}󰖁%{T-} muted 
-label-muted-foreground = ${colors.disabled}
+label-muted = 󰖁
+label-muted-font = 2
+label-muted-foreground = ${colors.primary}
