--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -49,9 +49,7 @@ font-1 = Hack Nerd Font Mono:size=20;6
 
 modules-left = xworkspaces xwindow
 modules-center = date
-modules-right = pulseaudio battery wlan brightness xkeyboard powermenu
-# modules-right = pulseaudio battery memory cpu wlan brightness xkeyboard powermenu
-
+modules-right = spotify pulseaudio battery wlan eth brightness xkeyboard powermenu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -78,6 +76,7 @@ include-file = modules/xworkspaces.ini
 
 include-file = modules/date.ini
 
+include-file = modules/spotify.ini
 include-file = modules/pulseaudio.ini
 include-file = modules/battery.ini
 include-file = modules/memory.ini
