--- a/i3/autostart.conf
+++ b/i3/autostart.conf
@@ -3,11 +3,13 @@
 # https://wiki.archlinux.org/index.php/XDG_Autostart
 exec --no-startup-id dex --autostart --environment i3
 
+# ---------- Picom ----------
+# run picom at startup
+exec_always --no-startup-id picom
+
 # ----------Autolock----------
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the screen before suspend. Use loginctl lock-session to lock your screen.
 exec --no-startup-id xautolock -time 5 -corners '-000' -locker "$HOME/dotfiles/i3/lockscrean.sh"
-# exec --no-startup-id xautolock -time 5 -corners '-000' -locker "pactl set-sink-mute @DEFAULT_SINK@ 1; i3lock -n -i $HOME/dotfiles/i3/backgrounds/OutsetIslandEvening.png"
-# exec --no-startup-id xautolock -time 5 -corners '-000' -locker "i3lock -n -i $HOME/dotfiles/i3/backgrounds/OutsetIslandEvening.png"
 
 # ----------Network Manager----------
 # NetworkManager is the most popular way to manage wireless networks on Linux, and nm-applet is a desktop environment-independent system tray GUI for it.
@@ -19,9 +21,7 @@ exec_always --no-startup-id feh --bg-scale $HOME/dotfiles/i3/backgrounds/OutsetI
 
 # ----------Polybar----------
 # kill any hanging polybar processes
-# exec_always killall polybar
-# exec_always --no-startup-id ~/dotfiles/polybar/launch_polybar.sh
-exec_always --no-startup-id polybar
+exec_always --no-startup-id $HOME/dotfiles/i3/launch_polybar.sh
 
 # ----------Xkeyboard----------
 # set xkeyboard layputs to be use in polybar alyout switcher
