--- a/i3/keybinds.conf
+++ b/i3/keybinds.conf
@@ -122,7 +122,17 @@ bindsym $mod+Shift+0 move container to workspace number $ws10
 
 
 
-#------------------ Resize ------------------
+#------------------ Pulseaudio ------------------
+# Use pactl to adjust volume in PulseAudio.
+set $refresh_i3status killall -SIGUSR1 i3status
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
+bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+
+
+
+#------------------ Resize mode ------------------
 
 bindsym $mod+r mode "resize"
 
@@ -153,11 +163,21 @@ mode "resize" {
 
 
 
+#------------------ Player mode ------------------
 
-#------------------ Pulseaudio ------------------
-# Use pactl to adjust volume in PulseAudio.
-set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+bindsym $mod+p mode "player"
+
+# resize window (you can also use the mouse for that)
+mode "player" {
+        # bindsym $mod+space exec --no-startup-id rofi -show drun
+        bindsym p exec spotify-launcher
+        bindsym j exec playerctl play-pause
+        bindsym l exec playerctl next
+        bindsym k exec playerctl previous
+        #
+        # back to normal: Enter or Escape or $mod+r
+        bindsym Return mode "default"
+        bindsym Escape mode "default"
+        bindsym $mod+p mode "default"
+}
+
