I3:added handling for screanshots

--- a/i3/autostart.conf
+++ b/i3/autostart.conf
@@ -5,11 +5,11 @@ exec --no-startup-id dex --autostart --environment i3
 
 # ---------- Picom ----------
 # run picom at startup
-exec_always --no-startup-id picom
+exec_always --no-startup-id picom --config $HOME/dotfiles/picom/picom.conf
 
 # ----------Autolock----------
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xautolock -time 5 -corners '-000' -locker "$HOME/dotfiles/i3/lockscrean.sh"
+exec --no-startup-id xautolock -time 5 -corners '-000' -locker "$HOME/dotfiles/i3/scripts/lockscrean.sh"
 
 # ----------Network Manager----------
 # NetworkManager is the most popular way to manage wireless networks on Linux, and nm-applet is a desktop environment-independent system tray GUI for it.
@@ -21,7 +21,8 @@ exec_always --no-startup-id feh --bg-scale $HOME/dotfiles/i3/backgrounds/OutsetI
 
 # ----------Polybar----------
 # kill any hanging polybar processes
-exec_always --no-startup-id $HOME/dotfiles/i3/launch_polybar.sh
+# /home/grzeszko/dotfiles/i3
+exec_always --no-startup-id $HOME/dotfiles/i3/scripts/launch_polybar.sh
 
 # ----------Xkeyboard----------
 # set xkeyboard layputs to be use in polybar alyout switcher
