--- a/i3/keybinds.conf
+++ b/i3/keybinds.conf
@@ -181,3 +181,21 @@ mode "player" {
         bindsym $mod+p mode "default"
 }
 
+#------------------ Image mode ------------------
+
+bindsym $mod+i mode "image"
+
+mode "image" {
+        bindsym p exec xcolor | xclip -sel clip
+        bindsym s exec $HOME/dotfiles/i3/scripts/screenshot.sh s; mode "default"
+        bindsym f exec $HOME/dotfiles/i3/scripts/screenshot.sh fs; mode "default"
+        bindsym Shift+s exec $HOME/dotfiles/i3/scripts/screenshot.sh s_s ; mode "default"
+        bindsym Shift+f exec $HOME/dotfiles/i3/scripts/screenshot.sh fs_s; mode "default"
+
+        #
+        # back to normal: Enter or Escape or $mod+r
+        bindsym Return mode "default"
+        bindsym Escape mode "default"
+        bindsym $mod+i mode "default"
+}
+
