--- a/i3/visual.conf
+++ b/i3/visual.conf
@@ -1,9 +1,9 @@
 # ----------bacground setting----------
 
-default_border pixel 1
-default_floating_border pixel 1
+# default_border pixel 1
+# default_floating_border pixel 1
 for_window [class="^.*"] border pixel 1
 gaps inner 10px
 
 
-# hide_edge_borders vertical
+hide_edge_borders vertical
