Picom: Disabled overiding background transparency (rofi now is not transparent)

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -3,12 +3,14 @@ backend = "glx";  # Use OpenGL backend for better performance
 
 # Transparency
 opacity-rule = [
+  "99:class_g = 'Rofi'",
   "100:fullscreen",
-],
-inactive-opacity = 0.6;
+];
+
+inactive-opacity = 0.7;
 active-opacity = 1.0;
 frame-opacity = 1.0;
-inactive-opacity-override = true;
+# inactive-opacity-override = true;
 
 # Fading
 fading = true;
@@ -44,11 +46,19 @@ blur:
   method = "gaussian";
   size = 10;
   deviation = 5.0;
-  exclude = [ 
-    "window_type = 'dock'",
-    "class_g = 'Polybar'",
-    ];
 };
+
+  blur-background-exclude = [
+    "window_type = 'desktop'",
+    # "window_type = 'dock'",
+    "class_g = 'slop'", #this accualy exclude maim for some reason
+    # "class_g = 'Chromium'",
+    # "class_g = 'Discord'",
+    # "class_g = 'flameshot'",
+    # "class_g = 'xdg-desktop-portal-gnome'",
+    # "class_g = 'colorful'",
+    "_GTK_FRAME_EXTENTS@:c"
+  ];
 
 # Exclude certain windows from effects
 wintypes:
