added submodule for browser hompage

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "tmux/plugins/tpm"]
 	path = tmux/plugins/tpm
 	url = https://github.com/tmux-plugins/tpm.git
+[submodule "BrowserHomePage"]
+	path = BrowserHomePage
+	url = git@github.com:EzraKirn/BrowserHomePage.git
