picom: VirtualBox Mashines opacity set to 100 alway

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -4,6 +4,7 @@ backend = "glx";  # Use OpenGL backend for better performance
 # Transparency
 opacity-rule = [
   "99:class_g = 'Rofi'",
+  "100:class_g = 'VirtualBox Machine'",
   "100:fullscreen",
 ];
 
