Polybar: position adjusted

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -62,11 +62,16 @@ enable-ipc = true
 
 ; override-redirect = true
 
+
+tray-position = right
+
+
 [module/systray]
 type = internal/tray
 
 format-margin = 8pt
 tray-spacing = 16pt
+tray-position = left
 
 
 include-file = colors.ini
