Dex: futsuma removed, xildehooks updated, gitignoresignore autostart symlinknk from other repo

--- a/autostart/xildeHooks.desktop
+++ b/autostart/xildeHooks.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
 Type=Application
 # Exec=xidlehook   --not-when-audio --timer 60 '$HOME/dotfiles/i3/scripts/lockscrean.sh' ''
-Exec=sh -c "xidlehook --not-when-audio --timer 60 \"\\$HOME/dotfiles/i3/scripts/lockscrean.sh\" ''"
+Exec=xidlehook --not-when-audio --timer 60 "$HOME/dotfiles/i3/scripts/lockscrean.sh" ''
 Name=Lock Screen
